--- a/packages/gantt-scheduler-timeline/package.json
+++ b/packages/gantt-scheduler-timeline/package.json
@@ -15,5 +15,10 @@
   "devDependencies": {
     "rimraf": "~5.0.0",
     "typescript": "~4.9.0"
+  },
+  "dependencies": {
+    "@visactor/vrender": "^0.19.2",
+    "dayjs": "^1.11.11",
+    "i18next": "^23.11.3"
   }
 }
