--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -11,6 +11,7 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "dayjs": "^1.11.11",
     "gantt-scheduler-timeline": "workspace:*",
     "react": "~18.2.0",
     "react-dom": "~18.2.0"
@@ -21,7 +22,7 @@
     "@vitejs/plugin-react": "~4.2.0",
     "rimraf": "~5.0.0",
     "typescript": "~4.9.3",
-    "vite-tsconfig-paths": "~4.2.0",
-    "vite": "~5.2.0"
+    "vite": "~5.2.0",
+    "vite-tsconfig-paths": "~4.2.0"
   }
 }
